# sable

./: Cargo.toml  README.md
shader/hlsl/: BoxShader.hlsl
shader/spirv/: BoxShader_PS.spv  BoxShader_VS.spv
shader/wgsl/: BoxShader.wgsl
src/: camera.rs  challenge.wgsl  constant_buffer.rs  geometry_builder.rs  lib.rs  main.rs  shader.wgsl  vertex.rs
