[package]
name = "sable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wgpu = "0.17.1"
# winit = "0.29.2"
# glam = "0.24.2"
# log = "0.4.20"
# env_logger = "0.10.0"
# pollster = "0.3.0"
# #tokio = "1.33.0"
# futures = "0.3.28"
# image = "0.24.7"
# anyhow = "1.0"
# bytemuck = "1.14.0"

winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"